--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar">
         <a href="#" class="active">Home</a>
         <a href="#">About</a>
-        <a href="#">Mennu</a>
+        <a href="#">Menu</a>
         <a href="#">Products</a>
         <a href="#">Review</a>
         <a href="#">Contacts</a>
