--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </section>
 
-    <section class="Products">
+    <section class="products">
       
       <h1 class="heading">our <span>Products</span></h1>
       <div class="box-container">
@@ -125,6 +125,55 @@
             <div class="info">
               <b class="price">$24.99</b>
               <span class="amound">110gr/300cl</span>
+            </div>
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="box">
+          <div class="box-head">
+            <span class="title">Mını Burger</span>
+            <a href="#" class="name">Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="images/product-2.png" alt="products">
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$24.99</b>
+              <span class="amound">110gr/300cl</span>
+            </div>
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="box dark-bg">
+          <div class="box-head">
+            <span class="title">Mını Burger</span>
+            <a href="#" class="name">Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="images/dark-product.jpg" alt="products">
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$24.99</b>
+              <span class="amound">110gr/300cl</span>
+            </div>
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
             </div>
           </div>
 
